--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@
                     transform: scale(1);
                     transition: transform 0.5s ease-in-out;
                     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.504);
-                    border-radius: 20px;
+                    
                 }
 
                 .capa{
@@ -202,13 +202,11 @@
                     top: 0;
                     opacity: .6;
                     color: var(--blanco-crema);
-                    transition: .5s ease;
+                    transition: .5s ease-in-out;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     font-size: 2rem;
-                    border-radius: 20px;
-                    /* text-align: center; */
                     cursor: pointer;
                     text-decoration: none;
                 }
@@ -322,6 +320,12 @@
             padding: 0 .5%;
             border: none;
         }
+
+        input::placeholder{
+            color: var(--blanco-crema);
+            opacity: 1;
+            font-size: 1rem;
+        }
     
         button{
             background-color: var(--dorado-oscuro);
@@ -333,7 +337,9 @@
             cursor: pointer;
             border-radius: 10px;
             border: none;
+            
         }
+
     }
 }
 
@@ -350,7 +356,7 @@
 
 /* QUE VISTO? */
 
-/* .que_visto{
+.que_visto{
     display: flex;
     background-color: var(--dorado-oscuro);
     min-width: 100%;
@@ -360,10 +366,16 @@
 
     .que_visto_texto{
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: justify;
     }
 
     .que_visto_grid{
         flex: 2;
+        padding-left: 15px;
 
         .que_visto_grid_contenedor_imagenes {
             width: 100%;
@@ -375,61 +387,30 @@
             grid-gap: 10px;
         }
         
-        .imagen_1 { grid-area: imagen_1; }
+        img {
+            min-width: 100%;
+            max-height: 110px;
+            object-fit: cover;
+            transition: all .5s ease-in-out;
+        }
+
+        img:hover{
+            transform: scale(1.1);
+        }
+
+        .imagen_1 img{
+            min-height: 38vh;
+            object-fit: cover;
+
+        }
+        
+        .imagen_1 { grid-area: imagen_1;}
         .imagen_2 { grid-area: imagen_2; }
         .imagen_3 { grid-area: imagen_3; }
         .imagen_4 { grid-area: imagen_4; }
         .imagen_5 { grid-area: imagen_5; }
         .imagen_6 { grid-area: imagen_6; }
         
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+        
     }
-} */
-
-.que_visto {
-    display: flex;
-    background-color: var(--dorado-oscuro);
-    min-width: 100%;
-    min-height: 50vh;
-    height: 50vh;
-    padding: 3% 5%;
-    box-sizing: border-box;
-  }
-  
-  .que_visto_texto {
-    flex: 1;
-  }
-  
-  .que_visto_grid {
-    flex: 2;
-  }
-  
-  .que_visto_grid_contenedor_imagenes {
-    display: grid;
-    grid-template-areas:
-      "imagen_1 imagen_2 imagen_3"
-      "imagen_1 imagen_4 imagen_4"
-      "imagen_1 imagen_5 imagen_6";
-    grid-gap: 10px;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-  }
-  
-  .imagen_1 { grid-area: imagen_1; }
-  .imagen_2 { grid-area: imagen_2; }
-  .imagen_3 { grid-area: imagen_3; }
-  .imagen_4 { grid-area: imagen_4; }
-  .imagen_5 { grid-area: imagen_5; }
-  .imagen_6 { grid-area: imagen_6; }
-  
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
+}
