--- a/style.css
+++ b/style.css
@@ -96,6 +96,18 @@
         button{
             padding: 1% 2%;
             border: none;
+            cursor: pointer;
+            background-color: var(--gris-oscuro);
+            color: var(--blanco-crema);
+            font-weight: bolder;
+            font-size: 1rem;
+            transition: all .4s ease-in-out;
+        }
+
+        button:hover{
+            transform: scale(1.1);
+            background-color: var(--dorado-oscuro);
+            color: var(--gris-oscuro);
         }
     }
 }
@@ -358,7 +370,7 @@
 
 .que_visto{
     display: flex;
-    background-color: var(--dorado-oscuro);
+    background-color: var(--blanco-crema);
     min-width: 100%;
     min-height: 50vh;
     height: 50vh;
@@ -371,6 +383,16 @@
         justify-content: center;
         align-items: center;
         text-align: justify;
+        padding: 0 2%;
+        color: var(--gris-oscuro);
+
+        h2{
+            min-width: 100%;
+            min-height: 25%;
+            font-size: 3rem;
+            text-align: center;
+
+        }
     }
 
     .que_visto_grid{
@@ -391,11 +413,11 @@
             min-width: 100%;
             max-height: 110px;
             object-fit: cover;
-            transition: all .5s ease-in-out;
+            transition: all .4s ease-in-out;
         }
 
         img:hover{
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
         .imagen_1 img{
@@ -410,7 +432,68 @@
         .imagen_4 { grid-area: imagen_4; }
         .imagen_5 { grid-area: imagen_5; }
         .imagen_6 { grid-area: imagen_6; }
-        
-        
     }
 }
+
+footer{
+    background-color: var(--dorado-oscuro);
+    width: 100%;
+    height: 50vh;
+    max-height: 50vh;
+    display: grid;
+    grid-template-areas: 
+        "logo logo logo logo serv_1 serv_2 redes"
+        "logo logo logo logo serv_1 serv_2 redes"
+        "logo logo logo logo serv_3 serv_4 redes"
+        "logo logo logo logo serv_3 serv_4 redes";
+    place-items: center;
+
+    .logo{grid-area: logo;}
+    .serv_1{grid-area: serv_1;}
+    .serv_2{grid-area: serv_2;}
+    .serv_3{grid-area: serv_3;}
+    .serv_4{grid-area: serv_4;}
+    .redes{grid-area:  redes;}
+
+    .redes{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        gap: 10%;
+    }
+
+    a{
+        text-decoration: none;
+        color: var(--gris-oscuro);
+        font-size: 1.5rem;
+    }
+
+    [class^="serv"]{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        color: var(--blanco-crema);
+    }
+
+    a img{
+        max-width: 50px;
+        margin: 0 5%;
+}
+
+.serv_1,
+.serv_2{
+    padding-top: 15vh ;
+}
+
+.serv_3,
+.serv_4{
+    padding-bottom: 15vh ;
+}
+
+}
+
