--- a/servicios_style.css
+++ b/servicios_style.css
@@ -109,9 +109,9 @@ a:visited{
 
 .personal_shopper{
     min-width: 100%;
-    min-height: 200vh;
-    background-color: var(--dorado-oscuro);
-    padding: 5% 5%;
+    min-height: 260vh;
+    background-color: var(--gris-oscuro);
+    padding: 0 5%;
 
     .descripcion{
         min-width: 100%;
@@ -136,6 +136,10 @@ a:visited{
         }
     }
 
+    .el_servicio{
+        margin-bottom: 10%;
+    }
+
     .el_servicio,
     .ventajas{
         background-color: var(--blanco-crema);
@@ -148,6 +152,7 @@ a:visited{
         padding: 0 5%;
 
         h2{
+            flex: 1;
             min-width: 100%;
             text-align: center;
             font-size: 3rem;
@@ -155,6 +160,7 @@ a:visited{
         }
 
         .contenedor_texto{
+            flex: 1;
             min-width: 100%;
             min-height: 60vh;
             display: flex;
@@ -164,6 +170,7 @@ a:visited{
             
 
             div{
+                flex: 1;
             
                 h3{
                     flex: 1;
@@ -192,5 +199,151 @@ a:visited{
 
 }
 
-/* VENTAJAS */
+/* INVERSION */
+
+.inversion{
+    min-width: 100%;
+    min-height: 100vh;
+    background-color: var(--blanco-crema);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    h2{
+        min-width: 100%;
+        text-align: center;
+        font-size: 3rem;
+        color: var(--gris-oscuro);
+    }
+
+    .contenedor_servicios{
+        background-color: var(--blanco-crema);
+        min-width: 100%;
+        min-height: 70vh;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        justify-content: center;
+        align-items: center;
+        padding: 0 20%;
+
+        h3{
+            text-align: center;
+            font-size: 2.5rem;
+            color: var(--dorado-oscuro);
+            margin-bottom: 5%;
+        }
+
+        .servicio_incluye{
+            color: var(--gris-oscuro);
+            display: inline-block;
+            text-align: center;
+            min-width: 100%;
+            font-size: 1.5rem;
+            margin: 2% 0;
+        }
+
+        .online,
+        .enpersona{
+            min-width: 25%;
+            min-height: 50dvh;
+
+
+            ul{
+                color: var(--gris-oscuro);
+                min-height: 20vh;
+                min-width: 100%;
+                text-align: justify;
+                padding: 0  15%;
+                font-size: 1.5rem;
+            }
+        }
+
+        .contenedor_btn{
+            min-width: 100%;
+            text-align: center;
+
+            button{
+                padding: 1% 2%;
+                margin-bottom: 5%;
+                border: none;
+                cursor: pointer;
+                background-color: var(--dorado-oscuro);
+                color: var(--gris-oscuro);
+                font-weight: bolder;
+                font-size: 1rem;
+                transition: all .4s ease-in-out;
+            }
+
+            button:hover{
+                transform: scale(1.1);
+                background-color: var(--gris-oscuro);
+                color: var(--blanco-crema);
+            }
+        }
+    }
+}
+
+footer{
+    background-color: var(--dorado-oscuro);
+    width: 100%;
+    height: 50vh;
+    max-height: 50vh;
+    display: grid;
+    grid-template-areas: 
+        "logo logo logo logo serv_1 serv_2 redes"
+        "logo logo logo logo serv_1 serv_2 redes"
+        "logo logo logo logo serv_3 serv_4 redes"
+        "logo logo logo logo serv_3 serv_4 redes";
+    place-items: center;
+
+    .logo{grid-area: logo;}
+    .serv_1{grid-area: serv_1;}
+    .serv_2{grid-area: serv_2;}
+    .serv_3{grid-area: serv_3;}
+    .serv_4{grid-area: serv_4;}
+    .redes{grid-area:  redes;}
+
+    .redes{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        gap: 10%;
+    }
+
+    a{
+        text-decoration: none;
+        color: var(--gris-oscuro);
+        font-size: 1.5rem;
+    }
+
+    [class^="serv"]{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        color: var(--blanco-crema);
+    }
+
+    a img{
+        max-width: 50px;
+        margin: 0 5%;
+}
+
+.serv_1,
+.serv_2{
+    padding-top: 15vh ;
+}
+
+.serv_3,
+.serv_4{
+    padding-bottom: 15vh ;
+}
+
+}
+
+
 
