--- a/contacto_style.css
+++ b/contacto_style.css
@@ -250,3 +250,73 @@ footer{
 
 }
 
+footer{
+    background-color: var(--dorado-oscuro);
+    width: 100%;
+    height: 50vh;
+    max-height: 50vh;
+    display: grid;
+    grid-template-areas: 
+        "logo logo logo logo serv_1 serv_2 redes"
+        "logo logo logo logo serv_1 serv_2 redes"
+        "logo logo logo logo serv_3 serv_4 redes"
+        "logo logo logo logo serv_3 serv_4 redes";
+    place-items: center;
+
+    .logo{grid-area: logo;}
+    .serv_1{grid-area: serv_1;}
+    .serv_2{grid-area: serv_2;}
+    .serv_3{grid-area: serv_3;}
+    .serv_4{grid-area: serv_4;}
+    .redes{grid-area:  redes;}
+
+    .redes{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        gap: 10%;
+    }
+
+    a{
+        text-decoration: none;
+        color: var(--gris-oscuro);
+        font-size: 1.5rem;
+    }
+
+    [class^="serv"]{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        color: var(--blanco-crema);
+    }
+
+    a img{
+        max-width: 50px;
+        margin: 0 5%;
+}
+
+.serv_1,
+.serv_2{
+    padding-top: 15vh ;
+}
+
+.serv_3,
+.serv_4{
+    padding-bottom: 15vh ;
+}
+
+}
+
+input{
+    z-index: 100;
+}
+
+.checkbox{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
