--- a/servicios_style.css
+++ b/servicios_style.css
@@ -346,4 +346,15 @@ footer{
 }
 
 
+.header_logo{
+    min-width: auto;
+    max-height: 20vh;
+    position: absolute;
+}
+
+.logo_footer{
+    position: absolute;
+    left: 0;
+}
+
 
