--- a/contacto_style.css
+++ b/contacto_style.css
@@ -320,3 +320,14 @@ input{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
+
+.header_logo{
+    min-width: auto;
+    max-height: 20vh;
+    position: absolute;
+}
+
+.logo_footer{
+    position: absolute;
+    left: 0;
+}
