--- a/historia_style.css
+++ b/historia_style.css
@@ -332,3 +332,14 @@ footer{
 
 }
 
+
+.header_logo{
+    min-width: auto;
+    max-height: 20vh;
+    position: absolute;
+}
+
+.logo_footer{
+    position: absolute;
+    left: 0;
+}
